커밋 잘 되나?3

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 	<br>
 	<br>
 	<hr>
+	<h1>제목</h1>
 	<p>Hello World!! </p>
-	<img src="https://dimg.donga.com/wps/NEWS/IMAGE/2022/05/23/113560792.2.jpg" alt="Son heung-min" width = "50%">    
+	<img src="https://dimg.donga.com/wps/NEWS/IMAGE/2022/05/23/113560792.2.jpg" alt="Son heung-min" width = "300px">    
 </body>
 </html>	
