--- a/index.html
+++ b/index.html
@@ -7,6 +7,76 @@
 	<title>Document</title>
 </head>
 <body>
+	<!-- form -->
+	<form action="#">
+		<table border="0">
+			<tr>
+				<th>ID</th>
+				<td><input type ="text"></td>
+			</tr>
+			<tr>
+				<th>Password</th>
+				<td><input type="password"></td>
+			</tr>
+		</table>
+		<input type="button" value="회원가입">
+		<input type="reset" value ="초기화">
+		<input type="submit" value="로그인">
+	</form>
+
+	<!-- ul>li*5-->
+	<ul>
+		<li>a</li>
+		<li>b</li>
+		<li>c</li>
+		<li>d</li>
+		<li>e</li>
+	</ul>
+
+	<ol>
+		<li>a</li>
+		<li>b</li>
+		<li>c</li>
+		<li>d</li>
+		<li>e</li>
+	</ol>
+
+
+	<!-- table>tr*5>td*2 (emmet)-->
+	<table width = '200px' border = '1'>
+		<tr>
+			<td rowspan="4">1</td>
+			<td>2</td>
+		</tr>
+		<tr>
+			<td>3</td>
+		</tr>
+		<tr>
+			<td>4</td>
+		</tr>
+		<tr>
+			<td>5</td>
+		</tr>
+		<tr>
+			<td colspan="2">6</td>
+		</tr>
+	</table>
+
+	<br>
+
+	<table width = '100' border = '1'>
+		<tr>
+			<td colspan ="2">1</td>
+		</tr>
+		<tr>
+			<td>1</td>
+			<td rowspan="2">2</td>
+		</tr>
+		<tr>
+			<td>1</td>
+		</tr>
+	</table>
+
 	<p>수정 되고있니</p>
 	<!--새창 띄우기-->
 	<!-- 타겟에 이름 지정하면 탭에 이름을 지정함, 보통은 blank(계속 새탭 열림)-->
@@ -17,6 +87,5 @@
 	<hr>
 	<h1>제목</h1>
 	<p>Hello World!! </p>
-	<img src="https://dimg.donga.com/wps/NEWS/IMAGE/2022/05/23/113560792.2.jpg" alt="Son heung-min" width = "300px">    
 </body>
 </html>	
