--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
 
 
 	<!-- table>tr*5>td*2 (emmet)-->
+	<br>
+	<p>실습3</p>
 	<table width = '200px' border = '1'>
 		<tr>
 			<td rowspan="4">1</td>
@@ -63,6 +65,66 @@
 	</table>
 
 	<br>
+	<p>실습4</p>
+	<table width = '200px' border = '1'>
+		<tr>
+			<td colspan="2">2</td>
+			<td rowspan="5">7</td>
+		</tr>
+		<tr>
+			<td rowspan="3">1</td>
+			<td>3</td>
+		</tr>
+		<tr>
+			<td>4</td>
+		</tr>
+		<tr>
+			<td>5</td>
+		</tr>
+		<tr>
+			<td colspan="2">6</td>
+		</tr>
+	</table>
+
+	<br>
+	<p>실습5</p>
+	<table width = 600px border = 1>
+		<tr>
+			<td width = 400px colspan="2">1</td>
+			<td width = 200px rowspan="2">2</td>
+		</tr>
+		<tr>
+			<td width = 200px rowspan="2">4</td>
+			<td width = 200px align="center"><img src="https://dimg.donga.com/wps/NEWS/IMAGE/2022/05/23/113560792.2.jpg" 
+				alt="Son heung-min" width = "100px"></td>
+		</tr>
+		<tr>
+			<td colspan="2">3</td>
+		</tr>
+	</table>
+
+	<br>
+	<br>
+
+	<br>
+	<p>실습6</p>
+	<table width = 600px border = 1 cellspacing = 0>
+		<tr>
+			<td bgcolor="yellow" width = 400px colspan="2">1</td>
+			<td bgcolor="green" width = 200px rowspan="2">2</td>
+		</tr>
+		<tr>
+			<td bgcolor="tomato" width = 200px rowspan="2">4</td>
+			<td width = 200px align="center"><img src="https://dimg.donga.com/wps/NEWS/IMAGE/2022/05/23/113560792.2.jpg" 
+				alt="Son heung-min" width = "100px"></td>
+		</tr>
+		<tr>
+			<td bgcolor="blue" colspan="2">3</td>
+		</tr>
+	</table>
+	<br>
+
+
 
 	<table width = '100' border = '1'>
 		<tr>
