--- a/html/video.html
+++ b/html/video.html
@@ -1,26 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- page 설명 -->
-	<meta main="description" content="비디오 태그 연습"> 
-	
+	<meta main="description" content="비디오 태그 연습">
+
 	<title>Document</title>
 </head>
-<body>
-  <!-- controls 속성이 있어야지 재생된다 -->
-	<!-- controls와 autoplay가 같이 있으면 autoplay 재생 안됨, muted가 있다면 가능-->
-	<video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ElephantsDream.mp4" 
-	autoplay controls muted width="600"></video>
 
-	<div>
-		<iframe width="560" height="315" src="https://www.youtube.com/embed/Dlfp3K11C_o" title="movie" 
-		frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
-		allowfullscreen></iframe>
+<body>
+	<div style="display: flex; position:fixed; width:100% justify-content: center;">
+		<table cellspacing="1" cellpadding="0" border="1">
+			<tr>
+				<td> <video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ElephantsDream.mp4" controls
+						width="300px" height="220"></video></td>
+				<td> <video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ElephantsDream.mp4" controls
+						width="300px" height="220"></video></td>
+				<td> <video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ElephantsDream.mp4" controls
+						width="300px" height="220"></video></td>
+			</tr>
+		</table>
 	</div>
 	
-	
+	<!-- controls 속성이 있어야지 재생된다 -->
+	<!-- controls와 autoplay가 같이 있으면 autoplay 재생 안됨, muted가 있다면 가능-->
+	<!-- 화면 크기가 변해도 3개가 1행에 유지하도록함. 가로길이를 %로 주기-->
+
+	<div style="display: flex; position:fixed; width:100% justify-content: center;">
+		<table cellspacing=1 cellpadding=0 border=1>
+			<tr>
+				<td> <iframe width="300" height="220" src="https://www.youtube.com/embed/Dlfp3K11C_o" title="movie"
+						frameborder="0"
+						allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+						allowfullscreen></iframe></td>
+				<td> <iframe width="300" height="220" src="https://www.youtube.com/embed/Dlfp3K11C_o" title="movie"
+						frameborder="0"
+						allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+						allowfullscreen></iframe></td>
+				<td> <iframe width="300" height="220" src="https://www.youtube.com/embed/Dlfp3K11C_o" title="movie"
+						frameborder="0"
+						allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+						allowfullscreen></iframe></td>
+			</tr>
+		</table>
+	</div>
+
+
 </body>
+
 </html>
