--- a/html/css/css2.html
+++ b/html/css/css2.html
@@ -12,7 +12,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300&display=swap" rel="stylesheet">
 </head>
 <body>
-	<div>
+	<div class="border">
 		div
 	</div>
 	<p>p 태그</p>
