--- a/html/css/css1.html
+++ b/html/css/css1.html
@@ -5,8 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
-	<!-- 외부 선언 방식 -->
-	<link rel="stylesheet" href="style.css">
+
 </head>
 <body>
 	<!-- 내부 선언 방식 -->
@@ -15,17 +14,15 @@
 			width: 100px;
 			background-color: yellow;
 			font-size: 30px;
-
 		}
-
 		h1 {
-			color : red;
+			color : tomato;
 		}
-	</style>
+	</style>		
+	<h1>내부 선언 CSS 연습</h1>
 
-	<h1>CSS 연습</h1>
 	<!-- 인라인 방식 : 쓰지 말 것 -->
- <div style="background-color: red;">
+ <div style="background-color: yellowgreen;">
 	 인라인 CSS
  </div>
 
