--- a/html/css/css2.html
+++ b/html/css/css2.html
@@ -10,6 +10,8 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300&display=swap" rel="stylesheet">
+	<!-- 외부 선언 방식 -->
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>
 	<div class="border">
