--- a/html/video.html
+++ b/html/video.html
@@ -12,41 +12,37 @@
 </head>
 
 <body>
-	<div style="display: flex; position:fixed; width:100% justify-content: center;">
-		<table cellspacing="1" cellpadding="0" border="1">
-			<tr>
-				<td> <video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ElephantsDream.mp4" controls
-						width="300px" height="220"></video></td>
-				<td> <video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ElephantsDream.mp4" controls
-						width="300px" height="220"></video></td>
-				<td> <video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ElephantsDream.mp4" controls
-						width="300px" height="220"></video></td>
-			</tr>
-		</table>
-	</div>
-	
-	<!-- controls 속성이 있어야지 재생된다 -->
-	<!-- controls와 autoplay가 같이 있으면 autoplay 재생 안됨, muted가 있다면 가능-->
-	<!-- 화면 크기가 변해도 3개가 1행에 유지하도록함. 가로길이를 %로 주기-->
+	<div>
+		<div>
+			<table border="1">
+				<tr>
+					<td align="center"> <video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ElephantsDream.mp4" controls
+							width="32%" ></video>
+					 <video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ElephantsDream.mp4" controls
+							width="32%" ></video>
+					 <video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ElephantsDream.mp4" controls
+							width="32%" ></video></td>
+				</tr>
+				<tr>
+					<td align="center"> <iframe width="32%" height="200" src="https://www.youtube.com/embed/Dlfp3K11C_o" title="movie"
+							frameborder="0"
+							allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+							allowfullscreen></iframe>
+				 <iframe width="32%" height="200" src="https://www.youtube.com/embed/Dlfp3K11C_o" title="movie"
+							frameborder="0"
+							allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+							allowfullscreen></iframe>
+				 <iframe width="32%" height="200" src="https://www.youtube.com/embed/Dlfp3K11C_o" title="movie"
+							frameborder="0"
+							allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+							allowfullscreen></iframe></td>
+				</tr>
 
-	<div style="display: flex; position:fixed; width:100% justify-content: center;">
-		<table cellspacing=1 cellpadding=0 border=1>
-			<tr>
-				<td> <iframe width="300" height="220" src="https://www.youtube.com/embed/Dlfp3K11C_o" title="movie"
-						frameborder="0"
-						allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-						allowfullscreen></iframe></td>
-				<td> <iframe width="300" height="220" src="https://www.youtube.com/embed/Dlfp3K11C_o" title="movie"
-						frameborder="0"
-						allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-						allowfullscreen></iframe></td>
-				<td> <iframe width="300" height="220" src="https://www.youtube.com/embed/Dlfp3K11C_o" title="movie"
-						frameborder="0"
-						allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-						allowfullscreen></iframe></td>
-			</tr>
-		</table>
-	</div>
+			</table>
+		</div>
+		<!-- controls 속성이 있어야지 재생된다 -->
+		<!-- controls와 autoplay가 같이 있으면 autoplay 재생 안됨, muted가 있다면 가능-->
+		<!-- 화면 크기가 변해도 3개가 1행에 유지하도록함. 가로길이를 %로 주기-->
 
 
 </body>
