--- a/html/css/border.html
+++ b/html/css/border.html
@@ -8,6 +8,9 @@
 </head>
 <body>
 	<style>
+		body{
+			margin: 0;
+		}
 		div {
 			margin-top: 10px;
 			margin-bottom: 10px;
@@ -28,6 +31,7 @@
 
 		.border-solid{
 			border-style: solid;
+			margin: 10px 10px 10px 0;
 
 		}
 	</style>
