--- a/html/css/display.html
+++ b/html/css/display.html
@@ -24,7 +24,7 @@
 			margin: 25px;
 			padding: 25px;		
 			position: relative;
-			display: inline-block;
+			display: block;
 			width: 100px; /* inline-blokc은 크기를 설정할 수 있음 */
 			height : 50px;
 			background-color: yellow;
