--- a/html/JS/js1.html
+++ b/html/JS/js1.html
@@ -34,7 +34,7 @@
 			console.log(items[i]);
 		}
 
-		for (let item in items){
+		for (let item in items){ //items의 index값을 출력
 			console.log(item);
 		}
 
