--- a/html/jquery/exam03.html
+++ b/html/jquery/exam03.html
@@ -5,7 +5,8 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
-	<script src="https://code.jquery.com/jquery-3.6.0.slim.js" integrity="sha256-HwWONEZrpuoh951cQD1ov2HUK5zA5DwJ1DNUXaM6FsY=" crossorigin="anonymous"></script>
+	<script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
+		crossorigin="anonymous"></script>
 </head>
 
 <style>
@@ -29,6 +30,10 @@
 		background-color: white;
 		margin: 10px;
 	}
+
+	#button {
+		margin-top: 10px;
+	}
 </style>
 <body>
 	<div class="container">
@@ -49,16 +54,17 @@
 		</div>
 	</div>
 
-	<div>
+	<div id = button>
 		<input id = "add_button" type="submit" value="등록하기">
 	</div>
 
 <script>
 		$('#add_button').click(function () {
+			let name = prompt('Intervewee');
 			let text = prompt('기사 내용');
-			$('.content').append(`<div class="item">${text}</div>`);
-		});
 
+			$('.content').append(`<div class="item"><b>${name}</b> ${text}</div>`);
+		});
 	</script>
 
 </body>
