--- a/jquery/P02.html
+++ b/jquery/P02.html
@@ -76,7 +76,7 @@
 			console.log($('input:checkbox[name=chk]:checked').length);
 
 			//name이 chk인 체크박스의 속성 check를 붙여라(전체 선택) 전체 체크방법1
-			// $('input[name=chk]:checkbox').prop('checked',true);
+			$('input[name=chk]:checkbox').prop('checked',true);
 			
 
 			//체크 된 것이 있는지?
