--- a/css/myTemplate.html
+++ b/css/myTemplate.html
@@ -111,7 +111,7 @@
 				<div> 안녕하세요, 제 이름은
 					<span id="name">이주현입니다.
 					</span> <br>
-					저는 프론트엔드 개발자입니다.
+					저는 full-stack 개발자입니다.
 				</div>
 				<br><br>
 				<div class="btn_link">
