--- a/game/index.html
+++ b/game/index.html
@@ -24,20 +24,40 @@
 
 	<script>
 		let isJumping = false;
+		let isGameOver = false;
+
+		function marioDown() {
+			if (isGameOver) {
+				return;
+			}
+
+			let marioLeft = Number($('#mario').css('left').replace('px', ''));
+			let marioRight = marioLeft + 200;
+
+			let goombaLeft = Number($('#goomba').css('left').replace('px', ''));
+
+			if (goombaLeft <= marioRight && isJumping == false) {
+				console.log('die');
+				// alert('Game over');
+				$('#goomba').stop();
+				isGameOver = true;
+			}
+
+		}
 
 		function getRandomInt(min, max) {
 			min = Math.ceil(min);
 			max = Math.floor(max);
-			return Math.floor(Math.random()*(max-min))+min; //최대값은 제외, 최솟값은 포함
+			return Math.floor(Math.random() * (max - min)) + min; //최대값은 제외, 최솟값은 포함
 		}
 
 		function goombaStart() {
-			let speed =getRandomInt(1000, 2000);
+			let speed = getRandomInt(1000, 2000);
 			let respawnTime = getRandomInt(1000, 2000);
-			$('#goomba').animate({left: '-200px'}, speed, function(){
+			$('#goomba').animate({ left: '-200px' }, speed, function () {
 				//왼쪽 끝까지 가면 초기 위치로 이동
 				$('#goomba').css('right', '-200px').css('left', '');
-				
+
 				//1초 후에 다시 출발
 				setTimeout(goombaStart, respawnTime);
 			});
@@ -46,20 +66,20 @@
 
 		//연타 방지
 		function jump() {
-			if (isJumping){
+			if (isJumping) {
 				return;
 			}
 
 			isJumping = true;
-			$('#mario').animate({ bottom: '+=200px'}, 'fast').animate({ bottom: '-=200px'}, 'slow', function() {
-				isJumping=false;
+			$('#mario').animate({ bottom: '+=200px' }, 'fast').animate({ bottom: '-=200px' }, 'slow', function () {
+				isJumping = false;
 			});
 		}
 
 		//onload
-		$(function() {
+		$(function () {
 			$('body').keydown(function (event) {
-				switch (event.key){
+				switch (event.key) {
 					case ' ':
 						jump();
 						break;
@@ -68,7 +88,10 @@
 		});
 
 		//굼바 출발
-			goombaStart();
+		goombaStart();
+
+		//충돌 체크
+		setInterval(marioDown, 10)
 
 
 	</script>
