--- a/game/index.html
+++ b/game/index.html
@@ -17,6 +17,7 @@
 	<div class="container">
 		<img id="mario" src="assets/mario.gif" alt="mario">
 		<img id="goomba" src="assets/goomba.png" alt="goomba">
+		<div id="score">점수 : 0</div>
 	</div>
 
 
@@ -25,6 +26,7 @@
 	<script>
 		let isJumping = false;
 		let isGameOver = false;
+		let score = 0;
 
 		function marioDown() {
 			if (isGameOver) {
@@ -55,6 +57,12 @@
 			let speed = getRandomInt(1000, 2000);
 			let respawnTime = getRandomInt(1000, 2000);
 			$('#goomba').animate({ left: '-200px' }, speed, function () {
+
+				if(isGameOver == false){
+					score += 100;
+					$('#score').text(`점수 :${score}`);
+				}	
+
 				//왼쪽 끝까지 가면 초기 위치로 이동
 				$('#goomba').css('right', '-200px').css('left', '');
 
