--- a/game/index.html
+++ b/game/index.html
@@ -10,18 +10,30 @@
 		crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="css/style.css">
 	<!--css style시트 연결-->
+	<style>
+		@import url('http://fonts.cdnfonts.com/css/new-super-mario-font-u');
+	</style>
+
 
 </head>
 
 <body>
 	<div class="container">
-		<div class="background"> </div>
-		<img id="mario" src="assets/mario.gif" alt="mario">
-		<img id="goomba" src="assets/goomba.gif" alt="goomba">
-		<img id="killer" src="assets/killer.jpg" alt="killer">
-		<div id="score">점수 : 0</div>
+		<div class="background"></div>
+		<div id="score">Score : 0</div>
+		<img id="mario" src="assets/marioSwim.gif" alt="mario">
+		<img id="fish" src="assets/fish.webp" alt="fish">
+		<img id="killer" src="assets/killer.png" alt="killer">
+		<img id="down" src="assets/down.png" alt="killer">
 	</div>
-
+	<div id="start">
+		<img src="assets/title.png" alt="title" />
+		<button id="game_start_button">START</button>
+	</div>
+	<div id="gameover">
+		<img src="assets/youdied.gif" alt="게임오버 이미지" id="gameover">
+		<button id="restart">RESTART</button>
+	</div>
 
 
 
@@ -31,11 +43,11 @@
 		let score = 0;
 		let isKillerStart = false;
 
-		function goombaDown() {
-			let goombaLeft = Number($('#goomba').css('left').replace('px', ''));
+		function fishDown() {
+			let fishLeft = Number($('#fish').css('left').replace('px', ''));
 			let killerRight = Number($('#killer').css('left').replace('px', '')) + 100;
 
-			if (isKillerStart && goombaLeft <= killerRight) {
+			if (isKillerStart && fishLeft <= killerRight) {
 				score += 200;
 				setScore(score);
 				$('#killer').stop().hide();
@@ -44,16 +56,25 @@
 				killerInit();
 				isKillerStart = false;
 
-				//굼바 없애고
-				$('#goomba').stop().hide();
-				goombaInit();
-				setTimeout(goombaStart, getRandomInt(500, 1000));
+				//적 물고기 없애고
+				$('#fish').stop().hide();
+				fishInit();
+				setTimeout(fishStart, getRandomInt(500, 1000));
 
 			}
-
-
-
 		}
+
+		function gameStart() {
+			$("#gameover").hide();
+			$("#mario").show();
+			$("#container").show;
+			$("#mariodead").hide();
+			$("#wepon").hide();
+			isGameOver = false;
+
+			killer.css({ right: "-100px" });
+		}
+
 
 		function marioDown() {
 			if (isGameOver) {
@@ -61,14 +82,15 @@
 			}
 
 			let marioLeft = Number($('#mario').css('left').replace('px', ''));
-			let marioRight = marioLeft + 200;
+			let marioRight = marioLeft + 90;
 
-			let goombaLeft = Number($('#goomba').css('left').replace('px', ''));
+			let fishLeft = Number($('#fish').css('left').replace('px', ''));
 
-			if (goombaLeft <= marioRight && isJumping == false) {
+			if (fishLeft <= marioRight && isJumping == false) {
 				console.log('die');
+				console.log($('#fish').css('left'));
 				// alert('Game over');
-				$('#goomba').stop();
+				$('#fish').stop();
 				isGameOver = true;
 			}
 
@@ -99,36 +121,32 @@
 			});
 		}
 
-		function goombaStart() {
+		function fishStart() {
 			let speed = getRandomInt(1000, 2000);
 			let respawnTime = getRandomInt(1000, 2000);
-			$('#goomba').animate({ left: '-200px' }, speed, function () {
-
+			$('#fish').animate({ left: '-150px' }, speed, function () {
 				if (isGameOver == false) {
 					score += 100;
 					setScore(score);
 				}
 
 				//왼쪽 끝까지 가면 초기 위치로 이동
-				$('#goomba').css('right', '-200px').css('left', '');
+				fishInit();
 
-				goombaInit();
-
-				//1초 후에 다시 출발
-				setTimeout(goombaStart, respawnTime);
+				//1~2초 후에 다시 출발
+				setTimeout(fishStart, respawnTime);
 			});
 		}
 
 		function setScore(score) {
-			$('#score').text(`점수 :${score}`);
+			$('#score').text(`Score :${score}`);
 		}
 
-		function goombaInit() {
-			//굼바 초기 위치로 이동
-			$('#goomba').css('right', '-200px').css('left', '').show();
+		function fishInit() {
+			//적 물고기 초기 위치로 이동
+			$('#fish').css('right', '-120px').css('left', '').show();
 
 		}
-
 
 		//연타 방지
 		function jump() {
@@ -146,26 +164,23 @@
 		$(function () {
 			$('body').keydown(function (event) {
 				switch (event.key) {
-					case ' ':
+					case 'd':
 						jump();
 						break;
-
-					case 'b':
+					case 'f':
 						killerStart();
 						break;
 				}
 			});
+
+			//적 물고기 출발
+			fishStart();
+			//충돌 체크
+			setInterval(marioDown, 10);
+
+			//적 물고기 죽었나 체크
+			setInterval(fishDown, 10);
 		});
-
-		//굼바 출발
-		goombaStart();
-
-		//충돌 체크
-		setInterval(marioDown, 10);
-
-		//굼바 죽었나 체크
-		setInterval(goombaDown, 10);
-
 
 	</script>
 </body>
